# Files-Sorter

./: main.py  pyproject.toml
sorter/: main.py
sorter/scripts/: sorter.py
